src/_includes/css/style.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

:root {
    --system-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    --page-background: #f9fafa;
    --code-font: "Source Code Pro, sans-serif";
    --light-gray-border: #e2e6eb;
    --link-blue: #125E87;
    --link-blue-two: rgb(34, 60, 165);
    --link-blue-accessible: #2540AD;
    --link-blue-accessible-hover: #1836AF;
}

/*** Screen reader ***/

.sr-only {
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
}

body {
    font-family: var(--system-font);
    background: #f9fafa;
    overflow-x: hidden;
    overflow-y: auto;
    line-height: 1.7;
    font-size: 100%;
    min-height: 100vh;
    margin: 0;
    padding: 0;
    -webkit-font-smoothing: antialiased;
}

img {
    max-width: 100%;
}

p {
    font-family: var(--system-font);
    color: #212121;
    font-size: 1.125rem;
    /* font-size: clamp(1.0625rem, 3vw, 1.0875rem); */
    line-height: 1.6;
    font-weight: 400;
}

code {
    font-family: monospace;
    font-size: 1.15rem;
    /* line-height: 100%; */
    font-weight: 400;
    white-space: nowrap;
    color: #212421;;
    padding: .075rem .2rem;
    margin: 0 .1rem;
    background: #eeeded;
    background: #f3f3f3;
    border: .05rem solid lightgray;
}

pre {
    /* white-space: pre-wrap; */
    /* overflow-wrap: break-word; */
    word-wrap: normal;
    background: #eeeded;
    font-family: var(--code-font);
    overflow-x: auto;
    padding: .75rem;
    font-size: clamp(1rem, 3vw, 1.0625rem);
}

pre code {
    overflow-x: scroll;
    margin: 0;
    padding: 0;
    line-height: 1.5;
    border: none;
}

h1,h2,h3,h4 {
    font-family: var(--system-font);
    color: #333;
    font-weight: 700;
}

h1, .h1 {
    --min-font-size: 1.75rem;
    --flex-unit: 9vw;
    --max-font-size: 3rem;
    /* font-size: 3rem; */
    font-size: clamp(var(--min-font-size), var(--flex-unit), var(--max-font-size));
    margin-bottom: 0;
    margin-top: 0;
}

h2,
.h2 {
    --min-font-size: 2rem;
    --flex-unit: 8vw;
    --max-font-size: 2.2rem;
    /* font-size: 2rem; */
    font-size: clamp(var(--min-font-size), var(--flex-unit), var(--max-font-size));
    margin-bottom: 1rem;
}

.h2-5 {
    --min-font-size: 1.55rem;
    --flex-unit: 6vw;
    --max-font-size: 1.6rem;
    /* font-size: 1.75rem; */
    font-size: clamp(var(--min-font-size), var(--flex-unit), var(--max-font-size));
}

h3,
.h3 {
    --min-font-size: 1.35rem;
    --flex-unit: 5vw;
    --max-font-size: 1.55rem;
    /* font-size: 1.75rem; */
    font-size: clamp(var(--min-font-size), var(--flex-unit), var(--max-font-size));
}

.skip-link {
    position: fixed;
    top: 0;
    left: 0;
    transform: translateY(-10rem);
    transition: transform .3s ease-in-out;
    padding: .5rem;
    background: rgb(255, 255, 255);
    color: #333;
}

.skip-link:focus {
    transform: translateY(0);
}

.four-oh-four {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    margin: 0 auto;
    max-width: 700px;
    padding-left: 1rem;
    padding-right: 1rem;
    height: 100vh;
    background: #26292b;
    color: #fff;
}

.four-oh-four ul li {
    margin: .5rem 0;
}

.four-oh-four h1,
.four-oh-four h2,
.four-oh-four p {
    color: #fff;
}

.four-oh-four a {
    color: #19C2FA !important;
}

main:focus {
    outline: none;
}

a, a:link {
    color: var(--link-blue-accessible);
    text-decoration: none;
}

button:focus,
a:focus,
input:focus,
textarea:focus {
    outline-offset: .1rem;
    
}

a:hover {
    cursor: pointer;
    text-decoration: underline;
}

.top-nav {
    margin: 0 auto;
}

.top-nav .nav-wrapper {
    max-width: 1100px;
    max-width: 980px;
    padding: .65rem 1.1rem;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.top-nav .nav-wrapper ul {
    padding-left: 0;
    list-style: none;
    display: flex;
    align-items: center;
    margin-top: .8rem;
    margin-bottom: .8rem;
}

.top-nav .nav-wrapper .nav-menu li a {
    color: #212121;
    color: #fff;
    text-decoration: none;
    font-weight: 500;
}

.top-nav .nav-wrapper .nav-menu li a:hover {
    text-decoration: underline;
}

.top-nav .nav-wrapper .nav-home {
    display: flex;
    justify-content: center;
    align-items: center;
}

.top-nav .nav-wrapper .nav-home li a span {
    background: inherit;
    background: #fafafa;
    border: .12rem solid #212121;
    color: #212121;
    border-radius: 0;
    padding: .5rem;
    margin-right: .75rem;
    font-weight: 700;
    font-size: 1rem;
}

.top-nav .nav-wrapper .nav-menu li a {
    padding: 0.5rem 0;
    margin: 0 .75rem;
    color: #212121;
    font-size: 1.0625rem;
}

.top-nav .nav-wrapper .nav-home li .home {
    font-weight: 500;
    font-size: 1.15rem;
    color: #212121;
    text-decoration: none;
    font-weight: 500;
}

.main-container .welcome-container {
    padding: 2.75rem 0 2.75rem 0;
    padding: 2.25rem 0 2.8rem;
    background: inherit;
    background:rgb(235, 235, 235);
    border-top: .12rem solid lightgray;
    border-bottom: .12rem solid lightgray;
} 

.about-main {
    display: flex;
    justify-content: center;
    align-items: center;
}

.about-headshot {
    display: block;
    max-width: 220px;
    margin: 4rem auto;
    border-radius: 50%;
}

.about-links {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.main-container .welcome-container .home-banner .banner-links a {
    text-decoration: none;
    padding-left: .5rem;
    padding-right: .5rem;
}
/* ... */

